# Sensor-Lab-Frontend

./: .gitignore  Cargo.toml  index.html
src/: lib.rs  main.rs
src/components/: mod.rs
src/components/arefu/: main_title.rs
