[package]
name = "sensor_lab_frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
gloo = "0.8.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
stylist = { version = "0.12.0", features = ["yew", "yew_integration"] }
wasm-bindgen = "0.2"
yew = { version = "0.20.0", features = ["csr"] }
